--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </div>
         <div class="error">
             <p>City not found</p>
+            <div class="popup" onclick="popupFn">
+                <span class="popupText" id="myPopup">Enter an existing city</span>
+            </div>
         </div>
         <div class="weather">
             <img src="images/rain.png" alt="rain" class="weather-icon">
@@ -41,10 +44,11 @@
                 </div>
             </div>
         </div>
+
     </div>
 
 
-<script src="index.js"></script>
+<script src="index.js" defer></script>
 
 </body>
 </html>
